package sn.epf.pointage.model.enums;

public enum ActionConnexion {
    CONNEXION,
    DECONNEXION,
    ECHEC_CONNEXION
}
