package sn.epf.pointage.model.enums;

public enum FrequenceCours {
    HEBDOMADAIRE,
    BIMENSUELLE
}
