package sn.epf.pointage.model.enums;

public enum StatutPointage {
    A_L_HEURE,
    EN_RETARD
}
