package sn.epf.pointage.model.enums;

public enum TypeAlerte {
    RETARD,
    ABSENCE
}
